// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch should be rendered correctly 1`] = `
<label
  className="container root size-18 -clickable"
  role="switch"
>
  <div
    className="uui-switch-body"
  >
    <input
      aria-checked={null}
      aria-hidden={true}
      checked={null}
      onChange={[Function]}
      type="checkbox"
    />
    <div
      className="uui-switch-toggler"
    />
  </div>
  <div
    className="uui-input-label"
    role="label"
  />
</label>
`;

exports[`Switch should be rendered correctly 2`] = `
<label
  className="container root size-18 -clickable"
  role="switch"
>
  <div
    className="uui-switch-body"
  >
    <input
      aria-checked={null}
      aria-hidden={true}
      checked={null}
      onChange={[Function]}
      type="checkbox"
    />
    <div
      className="uui-switch-toggler"
    />
  </div>
  <div
    className="uui-input-label"
    role="label"
  >
    Open
  </div>
</label>
`;
